cherrytree (0.38.8-0) bionic; urgency=low

  * Improved implementation of deletion of recent documents entry (#382)
  * Ctrl+Space to toggle To-Do List Item State (#438)
  * Fix detection of missing installation of xterm required in code execution on linux (with default settings)
  * Horizontal rule insert without hard coded newline before (still newline after)
  * updated Spanish language (Daniel)
  * updated Greek language (Delphina)
  * updated Armenian language (Seda)

 -- Giuseppe Penone <giuspen@gmail.com>  Thu, 21 Feb 2019 06:18:00 +0000