@@ -1,4 +1,4 @@
-<h2>Friends of giuspen.com (donated €5494,71)</h2>
+<h2>Friends of giuspen.com (donated €5509,71)</h2>
 • Andy Lavarre (United States) donated €350 {android, creation/modification per node + search filter}
 • Miguel Latorre (Spain) donated €240
 • DistroWatch.com (International) donated €200
@@ -34,7 +34,7 @@
 • William Haschke (United States) donated €40
 • Juan Rivera (Spain) donated €35
 • Glen Garfein (United States) donated €31,25
-• Jt Spratley (United States) donated €31
+• Jt Spratley (United States) donated €36
 • Christoph Rottleb (Germany) donated €30
 • Fabien Perdu (France) donated €30 {keyboard shortcut for subscript and superscript or a way to configure them}
 • Giulio Achilli (Italy) donated €30
@@ -218,6 +218,7 @@
 • Benjamin Westwood (United Kingdom) donated €5
 • Daniel Elias (Brazil) donated €5
 • Danilo Minervini (Italy) donated €5
+• Felix Sterzelmaier (???) donated €5 {android version}
 • Gabriel Terhorst (Germany) donated €5
 • Gerben Tijkken (Netherlands) donated €5
 • Gloria See (???) donated €5
@@ -232,6 +233,7 @@
 • Massimo Beltramin (Italy) donated €5
 • Mathias Huber (???) donated €5
 • Mark Kilduff (???) donated €5
+• Mark Smith (???) donated €5
 • Max Greisen (Belgium) donated €5
 • Maxime Lahaye (United States) donated €5
 • Michael Schönwälder (Germany) donated €5
